testdata/parse-errors/specs/multipleSpecHeadings.spec
Spec Heading
=============
One
====
Scenario
--------
* one
* two